# simple-cudf

./: README.md  build.sh  multirun.py
.github/scripts/: install_cuda_ubuntu.sh
.github/workflows/: c-cpp.yml
conda/envs/: simple-cudf.yml
cpp/: CMakeLists.txt  construct.h  minmax.cpp  rand.cu  read_table.cpp  sorting.cpp
